--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <title>Sidney Tan</title>
   </head>
   <body style="background-color: black">
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Sidney Tan's Portolio!</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
