--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <meta
       name="description"
       content="Sidney Tan's Portolio!"
+      description = "Sidney Tan's Portolio!"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
